editor-components/feature/feature28/feature28.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
  position: relative;
  z-index: 1;
  background: var(--composer-html-background) no-repeat center center;
  background-size: cover;

  &.overlay {
    &::before {
      content: "";
      position: absolute;
      left: 0;
      top: 0;
      width: 100%;
      height: 100%;
      background-color: var(--composer-overlay-color);
      z-index: 2;
      pointer-events: none;
    }
  }

  &.hasBackground {
    .max-content {
      min-height: 70vh;
      padding: 0;
    }

    .title,
    .description {
      color: var(--color-white) !important;
      background: transparent !important;
    }

    .title {
      &::before {
        background: var(--color-white) !important;
      }
    }
  }

  .max-content {
    position: relative;
    z-index: 3;
    display: flex;
    align-items: center;
    padding: var(--composer-gap-xl) 0;
  }

  .background-media {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    overflow: hidden;

    &>video {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }

  .content {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: var(--composer-gap-md);

    &.alignment-left {
      align-items: flex-start;
      text-align: left;

      .button-container {
        justify-content: flex-start;
      }
    }

    &.alignment-center {
      align-items: center;
      text-align: center;

      .button-container {
        justify-content: center;
      }
    }
  }

  /* === Değişiklik Burada === */
  .button {
    display: flex;
  }

  .button-text {
    display: flex;
  }

  .button-icon {
    display: flex;
  }
}

.button-container {
  display: flex;
  flex-wrap: wrap;
  gap: var(--composer-gap-md);
}

@container (max-width: #{$composer-phone-width}) {
  .content {
    .button-container {
      flex-direction: column;
      flex-wrap: nowrap;
    }
  }
}

