fix: removed gap

--- a/editor-components/feature/feature28/feature28.module.scss
+++ b/editor-components/feature/feature28/feature28.module.scss
@@ -68,7 +68,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: var(--composer-gap-md);
 
     &.alignment-left {
       align-items: flex-start;
